# transmogrify

./: Cargo.toml  README.md
transmogrify/: Cargo.toml
transmogrify-derive/: Cargo.toml
transmogrify-derive/src/: lib.rs
transmogrify-derive/tests/data/: type_empty_struct.rs  type_empty_struct_tuple.rs  type_error_no_attr.rs  type_marker_struct.rs  type_simple_enum.rs  type_simple_struct.rs  type_tuple_struct.rs
transmogrify-macro/: Cargo.toml
transmogrify-macro/src/: lib.rs
transmogrify/src/: basic.rs  chrono.rs  lib.rs  schemars.rs  serde_json_value.rs
transmogrify/tests/: test_derive.rs
transmogrify/tests/data/: test_derive_struct.rs  test_schema.rs
