[workspace]
members = [
	"transmogrify",
	"transmogrify-derive",
	"transmogrify-macro",
]

resolver = "2"

[workspace.dependencies]
chrono = "0.4.38"
expectorate = "1.1.0"
heck = "0.5.0"
pretty_assertions = "1.4.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.85"
quote = "1.0.36"
schemars = "0.8.21"
serde_json = "1.0.117"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
transmogrify-derive = { version = "0.1.0", path = "transmogrify-derive" }
transmogrify-macro = { version = "0.1.0", path = "transmogrify-macro" }
