[package]
name = "transmogrify-macro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

#[dev-dependencies]
pretty_assertions = { workspace = true }
prettyplease = { workspace = true }
